syntax = "proto3";

package cheqd.did.v2;

import "google/api/annotations.proto";
import "cheqd/did/v2/diddoc.proto";

option go_package = "github.com/cheqd/cheqd-node/x/did/types";

service Query {
	rpc DidDoc(QueryGetDidDocRequest) returns (QueryGetDidDocResponse) {
		option (google.api.http).get = "/cheqd/did/v2/diddoc/{id}";
	}
	rpc DidDocVersion(QueryGetDidDocVersionRequest) returns (QueryGetDidDocVersionResponse) {
		option (google.api.http).get = "/cheqd/did/v2/diddoc/{id}/{version}";
	}
	rpc AllDidDocVersions(QueryGetAllDidDocVersionsRequest) returns (QueryGetAllDidDocVersionsResponse) {
		option (google.api.http).get = "/cheqd/did/v2/diddoc/{id}";
	}
}

message QueryGetDidDocRequest {
	string id = 1;
}

message QueryGetDidDocResponse {
	DidDocWithMetadata value = 1;
}

message QueryGetDidDocVersionRequest {
	string id = 1;
	string version = 2;
}

message QueryGetDidDocVersionResponse {
	DidDocWithMetadata value = 1;
}

message QueryGetAllDidDocVersionsRequest {
	string id = 1;
}

message QueryGetAllDidDocVersionsResponse {
	repeated Metadata versions = 1;
}
